# Aegis

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/01_hello_compute/: CMakeLists.txt  add_vectors.hlsl  main.cpp
examples/02_async_streams/: CMakeLists.txt  main.cpp  shader_A.hlsl  shader_B.hlsl
include/aegis/: aegis.h  api.h  buffer.h  context.h  event.h  kernel.h  stream.h
src/: CMakeLists.txt  aegis_buffer.cpp  aegis_context.cpp  aegis_event.cpp  aegis_kernel.cpp  aegis_stream.cpp
src/backend/d3d12/: d3d12_backend.cpp  d3d12_buffer.cpp  d3d12_event.cpp  d3d12_kernel.cpp  d3d12_stream.cpp
src/internal/: backend.h  d3d12_backend.h  d3d12_buffer.h  d3d12_event.h  d3d12_kernel.h  d3d12_stream.h
